# Swap

./: .gitignore  AZURE_MIGRATION_GUIDE.md  MIGRATION_SUMMARY.md  QUICKSTART_AZURE.md  README.md  restart.sh  stop.sh
azure-migration/: .gitignore  README.md  (+1 more)
wap-backend/: .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  LEAN_BACKEND_PROMPT.md  LICENSE  Makefile  README.md  SETUP_STEPS.md  docker-compose.yml  firebase-credentials.json  fly.toml  pyproject.toml  pytest.ini  requirements.txt  setup.sh  vercel.json
wap-backend/.github/workflows/: cd.yml  ci.yml  deploy-with-registry.yml.example  deploy.yml
wap-backend/.vercel/: project.json
wap-backend/api/: requirements.txt
wap-backend/app/: __init__.py  auth.py  azure_search.py  cache.py  config.py  cosmos_db.py  db.py  email_service.py  email_templates.py  embeddings.py  firebase_db.py  main.py  matching.py  models.py  qdrant_client.py  schemas.py
wap-backend/app/routers/: messages.py  moderation.py  points.py  portfolio.py  profiles.py  reviews.py  search.py  swap_completion.py  swap_requests.py  swaps.py
wap-backend/docs/: API.md  ARCHITECTURE.md  CI_CD_SETUP.md  DEPLOY.md  DEPLOYMENT.md  SETUP.md
wap-backend/scripts/: migrate_firestore_to_cosmos.py  reindex.py
wap-backend/tests/: __init__.py  conftest.py  test_api.py  test_auth.py  test_cache.py  test_config.py  test_cosmos_db.py  test_email_service.py  test_embeddings.py  test_health.py  test_matching.py  test_router_messaging.py  test_router_moderation.py  test_router_profiles.py  test_router_swap_requests.py  test_schemas.py
(+69 files in other folders)
