[project]
name = "wap-backend"
version = "0.2.0"
description = "Skill-for-skill exchange platform API"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "firebase-admin==6.2.0",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "openai==1.12.0",
    "azure-search-documents==11.4.0",
    "azure-identity==1.15.0",
    "python-dotenv==1.0.0",
    "redis==5.0.1",
    "resend==0.7.0",
    "httpx==0.25.2",
]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --strict-markers --tb=short"

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

